# airflow-provider-mlflow

./: .astro-registry.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.md  README.rst  RELEASING.rst  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: documentation_preivew.yaml  documentation_preview.yaml  test.yaml
dev/: Dockerfile.airflow  Dockerfile.mlflow  db_init.sql  docker-compose.yaml
docs/source/: conf.py  index.rst  requirements.txt
example_dags/: sample-dag-airflow-predict.py  sample-dag-deploy.py  sample-dag-registry.py
mlflow_provider/: __init__.py
mlflow_provider/example_dags/: sample-dag-airflow-predict.py  sample-dag-deploy.py  sample-dag-registry.py  sample-dag.py
mlflow_provider/hooks/: base.py  client.py  deployment.py  mlflow_hook.py  pyfunc.py
mlflow_provider/operators/: airflow.py  deployment.py  mlflow_operator.py  pyfunc.py  registry.py
mlflow_provider/sensors/: sample_sensor.py
tests/hooks/: test_base.py  test_client.py  test_deployment.py  test_mlflow_base_hook.py  test_mlflow_client_hook.py  test_mlflow_deployment_hook.py  test_mlflow_hook.py  test_pyfunc.py
tests/operators/: test_deployment.py  test_mlflow_deployment_operators.py  test_mlflow_operator.py  test_mlflow_pyfunc_operators.py  test_mlflow_registry_operators.py  test_pyfunc.py  test_registry.py
tests/sensors/: test_sample_sensor.py
