[metadata]
name = airflow-provider-mlflow
version = attr: mlflow_provider.__version__
url = https://github.com/astronomer/airflow-provider-mlflow
author = Faisal Hoda
author_email = faisal@astronomer.io
description = Apache Airflow provider for MLflow
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code=https://github.com/astronomer/airflow-provider-mlflow
    Homepage=https://github.com/astronomer/airflow-provider-mlflow


[options]
python_requires = >=3.8
packages = find:
include_package_data = true
install_requires =
    apache-airflow>=2.2.0
    mlflow>=2.0
zip_safe = false

[options.extras_require]
dev =
    mypy>=0.800
    pytest
    pytest-cov
    pre-commit
    requests-mock

[options.packages.find]
include =
    mlflow_provider*

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
exclude = venv/*,tox/*,specs/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 119

[isort]
profile = black
multi_line_output = 3

[mypy]
warn_unused_ignores = True
namespace_packages = True
explicit_package_bases = True
pretty = True
show_error_codes = True
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
show_error_context = True
color_output = True

[mypy-airflow.*]
ignore_missing_imports = True

[mypy-asgiref.*]
ignore_missing_imports = True
